[gd_scene load_steps=9 format=3 uid="uid://cvpfwv0onhabb"]

[ext_resource type="Script" uid="uid://dfkk7fp813vk5" path="res://scripts/finish.gd" id="1_5nbog"]
[ext_resource type="AudioStream" uid="uid://ck8nt1dtr1635" path="res://assets/sounds/victory1.wav" id="2_07gpw"]
[ext_resource type="Script" uid="uid://cldrclxodd0t4" path="res://scripts/finish_ui.gd" id="3_m504p"]
[ext_resource type="FontFile" uid="uid://d3q781uu28256" path="res://assets/fonts/PixelOperator8.ttf" id="4_n8g1v"]

[sub_resource type="Animation" id="Animation_m504p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("win:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2pftv"]
resource_name = "win"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("win:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n8g1v"]
_data = {
&"RESET": SubResource("Animation_m504p"),
&"win": SubResource("Animation_2pftv")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q7jsg"]
bg_color = Color(0.14902, 0.156863, 0.160784, 0.501961)

[node name="finish_menu" type="Node2D"]
script = ExtResource("1_5nbog")

[node name="win" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_07gpw")
panning_strength = 2.38
bus = &"SFX"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_n8g1v")
}

[node name="finishUI" type="Panel" parent="."]
custom_minimum_size = Vector2(1152, 648)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = 1.5
offset_right = 1151.5
offset_bottom = 649.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q7jsg")
script = ExtResource("3_m504p")

[node name="Points" type="Label" parent="finishUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -77.5
offset_top = 120.0
offset_right = 77.5
offset_bottom = 152.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_n8g1v")
theme_override_font_sizes/font_size = 32
text = "Lorem ipsum dolor sit amet"
horizontal_alignment = 1

[node name="retry" type="Button" parent="finishUI"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 42.0
offset_top = 39.0
offset_right = 342.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("4_n8g1v")
theme_override_font_sizes/font_size = 32
text = "Retry"

[node name="menu" type="Button" parent="finishUI"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -342.0
offset_top = 39.0
offset_right = -42.0
offset_bottom = 89.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("4_n8g1v")
theme_override_font_sizes/font_size = 32
text = "Main menu"

[connection signal="pressed" from="finishUI/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="finishUI/menu" to="." method="_on_menu_pressed"]
